Made nav links' clickable areas bigger and without gaps, added padding to nav so there would't be strange rendering bug in webkit (it would appear now on hover right from the vertical line)

--- a/help/style.css
+++ b/help/style.css
@@ -113,6 +113,7 @@ nav {
 	position: fixed;
 	top: 13em;
 	width: 12em;
+	padding-right: 1em;
 	margin-left: -14em;
 	text-align: right;
 }
@@ -126,6 +127,7 @@ nav:not(:hover) {
 	}
 	
 	nav a {
+		padding: .25em 0;
 		text-decoration: none;
 		color: inherit;
 	}
